# handler/handler.go
@@ -52,4 +52,5 @@ func New(h Handler) *Handler {
 func (h *Handler) registerRoutes() {
 	h.Router.HandleFunc("/datasets/{username}/{slug}", h.getDataset).Methods("GET")
 	h.Router.HandleFunc("/datasets/{username}/{slug}", h.syncDataset).Methods("PUT")
+	h.Router.HandleFunc("/datasets/{username}/{slug}/zip", h.downloadDatasetZip).Methods("GET")
 }
